[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Codes/Achievements.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Misc/Achievements.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Misc/Trophies.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Misc/Pointer.png" type="Texture" id=4]
[ext_resource path="res://Assets/Scenes/Misc/Transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/SFX/MenuSelected.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/MenuSelecting.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/Music/Achievements.mp3" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 512, 300 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 512, 300 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="Animation" id=8]
resource_name = "Choosing"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 272, 176 ), Vector2( 256, 176 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 256, 176 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Arrows"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Arrows/PointerLeft:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 176, 224 ), Vector2( 178, 224 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Arrows/PointerRight:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 336, 240 ), Vector2( 334, 240 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Arrows/Left:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrows/Right:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Arrows/PointerLeft:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 184, 224 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Arrows/PointerRight:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 333, 256 ) ]
}

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[node name="Achievements" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackerGround" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 528.0
margin_bottom = 316.0
color = Color( 0, 0, 0, 1 )

[node name="Background" type="AnimatedSprite" parent="."]
position = Vector2( 256, 149 )
scale = Vector2( 0.9375, 0.88 )
frames = SubResource( 3 )
playing = true

[node name="Trophies" type="Sprite" parent="."]
position = Vector2( 256, 176 )
texture = ExtResource( 3 )
offset = Vector2( 0, 2 )
hframes = 11
frame = 8

[node name="Title" type="Label" parent="."]
margin_top = 48.0
margin_right = 512.0
margin_bottom = 80.0
custom_colors/font_color = Color( 1, 0.890196, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "YOU PLAYED THE GAME!!!"
align = 1
valign = 1

[node name="Description" type="Label" parent="Title"]
margin_top = 24.0
margin_right = 512.0
margin_bottom = 56.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Thank You So Much!!!"
align = 1
valign = 1

[node name="Back" type="Button" parent="Title"]
margin_left = 240.0
margin_top = 208.0
margin_right = 272.0
margin_bottom = 224.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.435294, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.72549, 0.458824, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
action_mode = 0
text = "Back"

[node name="Desc" type="Label" parent="Title"]
margin_top = 96.0
margin_right = 512.0
margin_bottom = 128.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Thank You So Much!!!"
align = 1
valign = 1

[node name="Choosing" type="AnimationPlayer" parent="."]
root_node = NodePath("../Trophies")
anims/Choosing = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Arrows" type="AnimationPlayer" parent="."]
root_node = NodePath("../Trophies")
autoplay = "Arrows"
anims/Arrows = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="PointerLeft" type="Button" parent="Arrows"]
margin_left = 184.0
margin_top = 224.0
margin_right = 212.0
margin_bottom = 246.0
rect_rotation = 89.9999
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
action_mode = 0
icon = ExtResource( 4 )
flat = true

[node name="PointerRight" type="Button" parent="Arrows"]
margin_left = 333.0
margin_top = 256.0
margin_right = 361.0
margin_bottom = 278.0
rect_rotation = -89.9999
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
action_mode = 0
icon = ExtResource( 4 )
flat = true

[node name="Transition" parent="." instance=ExtResource( 5 )]

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.2

[node name="Selecting" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
bus = "SFX"

[node name="Selected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "SFX"

[node name="Achievements" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
autoplay = true
bus = "Music"

[connection signal="focus_entered" from="Title/Back" to="." method="_on_Stuff_focus_entered"]
[connection signal="mouse_entered" from="Title/Back" to="." method="_on_Stuff_mouse_entered"]
[connection signal="pressed" from="Title/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Arrows/PointerLeft" to="." method="_on_PointerLeft_pressed"]
[connection signal="pressed" from="Arrows/PointerRight" to="." method="_on_PointerRight_pressed"]
[connection signal="animation_finished" from="Transition/Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]

[editable path="Transition"]
